@@ -1,5 +1,10 @@
 2001-05-30  Sam Steingold  <sds@gnu.org>
 
+	* compiler.lisp (compile-file-pathname-helper): return a logical
+	pathname when file is a logical pathname
+
+2001-05-30  Sam Steingold  <sds@gnu.org>
+
 	* pathname.d (merge-pathnames): fixed the 2001-05-24 patch to
 	handle unbound defaults
 
